# Seminars

./: .gitignore  README.md  Seminars.sln  Seminars.vcxproj
Laba1/: method1.cpp  method1.h  method2.cpp  method2.h  method3.cpp  method3.h  my_string.txt  output.txt  test.cpp
Laba2/: method1.cpp  method1.h  method2.cpp  method2.h  method3.cpp  method3.h  output.txt
Laba3+4/: OneList.h  TwoList.h  main.cpp
Seminar1/: CMakeLists.txt
Seminar1/sorting/include/: bubble_sort.h  exchange_sort.h  insertion_sort.h  optimized_bubble_sort.h  selection_sort.h
Seminar1/sorting/src/: bubble_sort.cpp  exchange_sort.cpp  insertion_sort.cpp  optimized_bubble_sort.cpp  selection_sort.cpp
Seminar1/tests/: test_bubble_sort.cpp  test_exchange_sort.cpp  test_insertion_sort.cpp  test_optimized_bubble_sort.cpp  test_selection_sort.cpp
Seminar2/sorting/include/: binary_insertion_sort.h  shaker_sort.h
Seminar2/sorting/src/: binary_insertion_sort.cpp  shaker_sort.cpp
Seminar2/tests/: test_binary_insertion_sort.cpp  test_shaker_sort.cpp
Seminar3/sorting/include/: quick_sort.h  shell_sort.h
Seminar3/sorting/src/: quick_sort.cpp  shell_sort.cpp
Seminar3/tests/: test_quick_sort.cpp  test_shell_sort.cpp
Seminar4/sorting/include/: natural_merge_sort.h  one_phase_merge_sort.h  two_phase_merge_sort.h
Seminar4/sorting/src/: natural_merge_sort.cpp  one_phase_merge_sort.cpp  two_phase_merge_sort.cpp
Seminar4/tests/: test_natural_merge_sort.cpp  test_one_phase_merge_sort.cpp  test_two_phase_merge_sort.cpp
